# kde3-hacks-slackbuild

./: README.md
digikam-0.9.6/: Mainpage.dox  Makefile  Makefile.am.in  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.files  configure.in  configure.in.in  libtool  subdirs
digikam-0.9.6/digikam/: Makefile  Makefile.in
digikam-0.9.6/digikam/data/: Makefile  Makefile.in
digikam-0.9.6/digikam/digikam/: Makefile  Makefile.in  albummanager.cpp
digikam-0.9.6/digikam/imageplugins/: Makefile  Makefile.in
digikam-0.9.6/digikam/kioslave/: Makefile  Makefile.in  digikamthumbnail.cpp
digikam-0.9.6/digikam/libs/: Makefile  Makefile.in
digikam-0.9.6/digikam/showfoto/: Makefile  Makefile.in
digikam-0.9.6/digikam/themedesigner/: Makefile  Makefile.in
digikam-0.9.6/digikam/utilities/: Makefile  Makefile.in
digikam-0.9.6/doc/: Makefile  Makefile.in
digikam-0.9.6/po/: Makefile  Makefile.in
digikam-0.9.6/po/ar/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/bg/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/br/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/ca/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/cs/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/cy/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/da/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/de/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/el/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/en_GB/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/es/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/et/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/fa/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/fi/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/fr/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/gl/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/he/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/hu/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/is/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/it/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/ja/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/ka/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/lt/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/mk/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/ms/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/mt/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/nb/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/nds/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/nl/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/nn/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/pa/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/pl/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/pt/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/pt_BR/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/ro/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/ru/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/rw/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/sk/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/sl/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/sr/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/sr@Latn/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/sv/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/ta/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/th/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/tr/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/uk/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/vi/: Makefile  Makefile.am  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/zh_CN/: Makefile  Makefile.in  digikam.gmo  digikam.po
digikam-0.9.6/po/zh_TW/: Makefile  Makefile.in  digikam.gmo  digikam.po
kalsamix/kalsamix-1.0.0beta2/src/: Makefile  Makefile.am  Makefile.in  alsacb.cpp  alsacb.h  kalsa.cpp  (+74 more)
kdebluetooth-1.0~beta9~r769275/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  VERSION  config.h  config.h.in  config.h.in~  config.status  configure  configure.files  configure.in  libtool  subdirs
kdebluetooth-1.0~beta9~r769275/autom4te.cache/: output.0  traces.0
kdebluetooth-1.0~beta9~r769275/debian/: changelog  control  copyright  kdebluetooth.install  libkbluetooth-dev.install  libkbluetooth0.install  rules  watch
kdebluetooth-1.0~beta9~r769275/doc/: Makefile  Makefile.in
kdebluetooth-1.0~beta9~r769275/kdebluetooth/: Makefile  Makefile.am  Makefile.in  README  configure.in.bot  configure.in.in
kdebluetooth-1.0~beta9~r769275/po/: Makefile  Makefile.in
kipi-plugins-0.1.7/: Makefile  Makefile.am  Makefile.am.in  Makefile.in  RELEASE.rev  config.h  config.h.in  config.status  configure  configure.files  configure.in  configure.in.in  kipi-plugins-0.1.6-alt-fix-redeclaration.patch  libtool  prepare_libkexiv2.rb  release_libkexiv2.rb  subdirs
kipi-plugins-0.1.7/doc/: Makefile  Makefile.in
kipi-plugins-0.1.7/kipi-plugins/: Makefile  Makefile.in
kipi-plugins-0.1.7/po/: Makefile  Makefile.in
libkdcraw-0.2.0-my/: Makefile  Makefile.in  PACKAGING  RELEASE.rev  config.status  configure  configure.in  libtool  subdirs
libkdcraw-0.2.0-my/libkdcraw/: Makefile
libkdcraw-0.2.0-my/po/: Makefile  Makefile.in
libkexiv2-0.1.9/: Mainpage.dox  Makefile.in  RELEASE.rev  bootstrap  config.h.in  configure  configure.files  configure.in  subdirs
libkexiv2-0.1.9/libkexiv2/: Makefile.in
(+5766 files in other folders)
