dnl =======================================================
dnl FILE: ./admin/configure.in.min
dnl =======================================================

dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
dnl    Boston, MA 02110-1301, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kdebluetooth-1.0~beta9~r769275, "3.5.7") dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

AC_PROG_CC
AC_PROG_CXX
AC_EXEEXT
AC_OBJEXT



dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3.2)
AC_PATH_KDE
dnl =======================================================
dnl FILE: configure.in.in
dnl =======================================================

#MIN_CONFIG(3.2)
CXXFLAGS="$CXXFLAGS $KDE_DEFAULT_CXXFLAGS"

if test "$build_arts" = "yes"; then
    AC_DEFINE(USE_ARTS, 1, [If we use arts volume])
    LIB_ARTS="-lartskde"
    AC_SUBST(LIB_ARTS)
fi

KDE_INIT_DOXYGEN([The API Reference], [Version $VERSION])

dnl =======================================================
dnl FILE: ./kdebluetooth/configure.in.in
dnl =======================================================

#MIN_CONFIG(3.0.0)

dnl PACKAGE set before
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

KDEBLUETOOTH_VERSION=1.00-beta8

# KDE_EXPAND_MAKEVAR(KDEBLUETOOTH_VERSION, KDEBLUETOOTH_VERSION)
# AC_SUBST(KDEBLUETOOTH_VERSION)
AC_DEFINE_UNQUOTED(KDEBLUETOOTH_VERSION, "$KDEBLUETOOTH_VERSION", [version of the kdebluetooth package])

# DBUS
PKG_CHECK_MODULES(DBUS, "dbus-1")

AC_SUBST(DBUS_CFLAGS)
AC_SUBST(DBUS_LIBS)	

# DBUS QT BINDING ### stolen from kpowersave and knetworkmanager ;) #	
CPPFLAGS="$CPPFLAGS $DBUS_CFLAGS $all_includes -DDBUS_API_SUBJECT_TO_CHANGE"
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_CHECK_HEADER([dbus/connection.h],,[AC_MSG_ERROR([You need D-BUS/Qt3 bindings])])
AC_CHECK_HEADER([dbus/message.h],,[AC_MSG_ERROR([You need D-BUS/Qt3 bindings])])
CPPFLAGS=$safe_CPPFLAGS
AC_LANG_RESTORE

# OBEXFTP
AC_CHECK_HEADER([obexftp/obexftp.h],,[AC_MSG_ERROR([kio_obex need obexftp])])

# BLUEZ
PKG_CHECK_MODULES(BLUETOOTH, "bluez")

AC_SUBST(BLUETOOTH_CFLAGS)
AC_SUBST(BLUETOOTH_LIBS)	

dnl =======================================================
dnl FILE: ./kdebluetooth/kbtobexsrv/configure.in.in
dnl =======================================================

dnl The obex push server is not supposed to be called by users,
dnl so we install it in the kde_libdir
dnl AC_OUTPUT(kdebluetooth/kbtobexsrv/kbtobexsrv.desktop)
dnl AC_OUTPUT(kdebluetooth/kbtobexsrv/kbluetooth_kbtobexsrv.desktop)

KBTOBEXSRV_BINDIR=${libdir}/kdebluetooth/servers
KDE_EXPAND_MAKEVAR(KBTOBEXSRV_BINDIR, KBTOBEXSRV_BINDIR)
AC_SUBST(KBTOBEXSRV_BINDIR)
dnl =======================================================
dnl FILE: ./kdebluetooth/kdebluetooth-common/dunhandler/configure.in.in
dnl =======================================================

dnl AC_OUTPUT(kdebluetooth/kdebluetooth-common/dunhandler/dunhandler.desktop)
KDE_EXPAND_MAKEVAR(dunhandler_dir, kde_datadir)
AC_SUBST(dunhandler_dir)

dnl =======================================================
dnl FILE: ./kdebluetooth/kdebluetooth-common/faxhandler/configure.in.in
dnl =======================================================

dnl AC_OUTPUT(kdebluetooth/kdebluetooth-common/faxhandler/faxhandler.desktop)
KDE_EXPAND_MAKEVAR(faxhandler_dir, kde_datadir)
AC_SUBST(faxhandler_dir)

dnl =======================================================
dnl FILE: ./kdebluetooth/libkobex/configure.in.in
dnl =======================================================

# OPENOBEX
PKG_CHECK_MODULES(OPENOBEX, "openobex")

AC_SUBST(OPENOBEX_CFLAGS)
AC_SUBST(OPENOBEX_LIBS)	


dnl =======================================================
dnl FILE: ./kdebluetooth/libqobex/configure.in.in
dnl =======================================================

dnl
dnl Check for tty locking libraries.
dnl baudboy uses lockdev and is used by newer RedHat distros.
dnl lockdev is availabel on RedHat and Debian
dnl If none of them is available we do own locking like describesd in the
dnl serial HOWTO.
dnl

AC_CHECK_HEADERS(sys/select.h)

AC_CHECK_HEADERS(baudboy.h,HAVE_BAUDBOY_H=1,HAVE_BAUDBOY_H=0,[
#define inline __inline__
#include <sys/types.h>
#include <sys/stat.h>
#include <fcntl.h>
])
AC_CHECK_HEADERS(lockdev.h)
AC_CHECK_LIB(lockdev, dev_lock, [ LIB_LOCKDEV="-llockdev" ])
dnl We don't need liblockdev if we have baudboy working
if test "x${HAVE_BAUDBOY_H}" = "x1"; then
  LIB_LOCKDEV=""
fi
AC_SUBST(LIB_LOCKDEV)


dnl
dnl Bluetooth setup. Initial code here is taken from multisync.
dnl

AC_CHECK_LIB(bluetooth,baswap,BLUETOOTH=1,BLUETOOTH=0)
AC_CHECK_LIB(bluetooth,sdp_list_free,SDP_IN_BLUETOOTH=1,SDP_IN_BLUETOOTH=0)
AC_CHECK_LIB(sdp,sdp_list_free,SDP_IN_SDP=1,SDP_IN_SDP=0)
AC_MSG_CHECKING(for correct SDP lib version)
AC_TRY_COMPILE([
#define inline __inline__
#include <bluetooth/sdp.h>
#include <bluetooth/sdp_lib.h>
],[sdp_record_t t;],AC_MSG_RESULT(yes),BLUETOOTH=0;AC_MSG_RESULT(no))
if test "x${SDP_IN_SDP}" = "x0" -a "x${SDP_IN_BLUETOOTH}" = "x0" ; then
  BLUETOOTH=0
  DO_NOT_COMPILE="$DO_NOT_COMPILE kdebluetooth"
fi
AM_CONDITIONAL(QOBEX_BTTRANSPORT,test "${BLUETOOTH}" = "1")
if test "x${BLUETOOTH}" = "x1"; then
  AC_DEFINE_UNQUOTED(HAVE_QOBEX_BLUETOOTH, ${BLUETOOTH}, Defined if Bluetooth is enabled.)
  LIB_BLUETOOTH=-lbluetooth
  if test "x${SDP_IN_SDP}" = "x1" ; then
    LIB_SDP=-lsdp
  else
    LIB_SDP=
  fi
fi
AC_SUBST(LIB_BLUETOOTH)
AC_SUBST(LIB_SDP)


dnl
dnl IrDA setup. Initial code here is taken from multisync.
dnl

AC_MSG_CHECKING(for IrDA support)
AC_TRY_COMPILE([
#include <sys/socket.h>
#include <linux/types.h>
#include <linux/irda.h>
], [], IRDA=1;AC_MSG_RESULT(yes), IRDA=0;AC_MSG_RESULT(no) )
AM_CONDITIONAL(QOBEX_IRDATRANSPORT,test "${IRDA}" = "1")
if test "x${IRDA}" = "x1"; then
  AC_DEFINE_UNQUOTED(HAVE_QOBEX_IRDA, ${IRDA}, Defined if IrDA is enabled.)
fi
KDE_CREATE_SUBDIRSLIST
AM_CONDITIONAL(doc_SUBDIR_included, test "x$doc_SUBDIR_included" = xyes)
AM_CONDITIONAL(kdebluetooth_SUBDIR_included, test "x$kdebluetooth_SUBDIR_included" = xyes)
AM_CONDITIONAL(po_SUBDIR_included, test "x$po_SUBDIR_included" = xyes)
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ doc/Makefile ])
AC_CONFIG_FILES([ doc/ca/Makefile ])
AC_CONFIG_FILES([ doc/da/Makefile ])
AC_CONFIG_FILES([ doc/es/Makefile ])
AC_CONFIG_FILES([ doc/et/Makefile ])
AC_CONFIG_FILES([ doc/fr/Makefile ])
AC_CONFIG_FILES([ doc/it/Makefile ])
AC_CONFIG_FILES([ doc/kdebluetooth/Makefile ])
AC_CONFIG_FILES([ doc/nl/Makefile ])
AC_CONFIG_FILES([ doc/pt/Makefile ])
AC_CONFIG_FILES([ doc/ru/Makefile ])
AC_CONFIG_FILES([ doc/sv/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kbluelock/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kbluemon/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kbluetooth/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kbtobexclient/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kbtobexsrv/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kbtserialchat/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kcm_btpaired/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/dunhandler/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/faxhandler/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/icons/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/mimetypes/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/sdpmimemappings/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kinputwizard/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kioclient/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kioslave/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kioslave/bluetooth/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kioslave/obex/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kioslave/obex/kio_obex/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kioslave/sdp/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/libkbluetooth/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/libkobex/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/libqobex/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/libqobex/qobex/Makefile ])
AC_CONFIG_FILES([ po/Makefile ])
AC_CONFIG_FILES([ po/ar/Makefile ])
AC_CONFIG_FILES([ po/bg/Makefile ])
AC_CONFIG_FILES([ po/br/Makefile ])
AC_CONFIG_FILES([ po/ca/Makefile ])
AC_CONFIG_FILES([ po/cs/Makefile ])
AC_CONFIG_FILES([ po/cy/Makefile ])
AC_CONFIG_FILES([ po/da/Makefile ])
AC_CONFIG_FILES([ po/de/Makefile ])
AC_CONFIG_FILES([ po/el/Makefile ])
AC_CONFIG_FILES([ po/en_GB/Makefile ])
AC_CONFIG_FILES([ po/es/Makefile ])
AC_CONFIG_FILES([ po/et/Makefile ])
AC_CONFIG_FILES([ po/fi/Makefile ])
AC_CONFIG_FILES([ po/fr/Makefile ])
AC_CONFIG_FILES([ po/ga/Makefile ])
AC_CONFIG_FILES([ po/gl/Makefile ])
AC_CONFIG_FILES([ po/hu/Makefile ])
AC_CONFIG_FILES([ po/is/Makefile ])
AC_CONFIG_FILES([ po/it/Makefile ])
AC_CONFIG_FILES([ po/ja/Makefile ])
AC_CONFIG_FILES([ po/ka/Makefile ])
AC_CONFIG_FILES([ po/lt/Makefile ])
AC_CONFIG_FILES([ po/mt/Makefile ])
AC_CONFIG_FILES([ po/nl/Makefile ])
AC_CONFIG_FILES([ po/pa/Makefile ])
AC_CONFIG_FILES([ po/pl/Makefile ])
AC_CONFIG_FILES([ po/pt/Makefile ])
AC_CONFIG_FILES([ po/pt_BR/Makefile ])
AC_CONFIG_FILES([ po/ro/Makefile ])
AC_CONFIG_FILES([ po/ru/Makefile ])
AC_CONFIG_FILES([ po/rw/Makefile ])
AC_CONFIG_FILES([ po/sk/Makefile ])
AC_CONFIG_FILES([ po/sr/Makefile ])
AC_CONFIG_FILES([ po/sr@Latn/Makefile ])
AC_CONFIG_FILES([ po/sv/Makefile ])
AC_CONFIG_FILES([ po/ta/Makefile ])
AC_CONFIG_FILES([ po/tr/Makefile ])
AC_CONFIG_FILES([ po/zh_CN/Makefile ])
AC_CONFIG_FILES([ kdebluetooth/kbtobexsrv/kbtobexsrv.desktop ])
AC_CONFIG_FILES([ kdebluetooth/kbtobexsrv/kbluetooth_kbtobexsrv.desktop ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/dunhandler/dunhandler.desktop ])
AC_CONFIG_FILES([ kdebluetooth/kdebluetooth-common/faxhandler/faxhandler.desktop ])
AC_OUTPUT
dnl put here things which have to be done as very last part of configure

if test "$no_bluetooth" = "yes" ; then
	echo ""
	echo "You're missing libbluetooth that it's a part of bluez-libs"
	echo "Kdebluetooth won't be compiled without it, so you should"
	echo "consider installing it."
	echo ""
fi


if test "$no_bluetooth" = "yes" ; then
	echo ""
	echo "You're missing libsdpd that it's a part of bluez-sdpd"
	echo "Kdebluetooth won't be compiled without it, so you should"
	echo "consider installing it."
	echo ""
fi


if test "$OPENOBEX_LIBS" = "no" -o "$OPENOBEX_CFLAGS" = "no"; then
	echo ""
	echo "You're missing openobex."
	echo "Kdebluetooth won't be compiled without it, so you should"
	echo "consider installing it."
	echo ""
fi




# Check if KDE_SET_PREFIX was called, and --prefix was passed to configure
if test -n "$kde_libs_prefix" -a -n "$given_prefix"; then
  # And if so, warn when they don't match
  if test "$kde_libs_prefix" != "$given_prefix"; then
    # And if kde doesn't know about the prefix yet
    echo ":"`kde-config --path exe`":" | grep ":$given_prefix/bin/:" 2>&1 >/dev/null
    if test $? -ne 0; then
      echo ""
      echo "Warning: you chose to install this package in $given_prefix,"
      echo "but KDE was found in $kde_libs_prefix."
      echo "For this to work, you will need to tell KDE about the new prefix, by ensuring"
      echo "that KDEDIRS contains it, e.g. export KDEDIRS=$given_prefix:$kde_libs_prefix"
      echo "Then restart KDE."
      echo ""
    fi
  fi
fi

if test x$GXX = "xyes" -a x$kde_have_gcc_visibility = "xyes" -a x$kde_cv_val_qt_gcc_visibility_patched = "xno"; then
  echo ""
  echo "Your GCC supports symbol visibility, but the patch for Qt supporting visibility"
  echo "was not included. Therefore, GCC symbol visibility support remains disabled."
  echo ""
  echo "For better performance, consider including the Qt visibility supporting patch"
  echo "located at:"
  echo ""
  echo "http://bugs.kde.org/show_bug.cgi?id=109386"
  echo ""
  echo "and recompile all of Qt and KDE. Note, this is entirely optional and"
  echo "everything will continue to work just fine without it."
  echo ""
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
